# ObEngine-near-ledger

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
extlibs/near-ledger/: .gitignore  CMakeLists.txt  README.md
extlibs/near-ledger/ledgercpp/: hid_device.hpp  ledger.cpp  ledger.hpp  main.cpp
include/: PluginSDK.hpp
src/: main.cpp
